objects/LMS_Course_Certification__c.object
<CustomObject>
    <fields>
        <fullName>Certification_ID__c</fullName>
        <label>Certification Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Title__c</fullName>
        <label>Certification Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Id__c</fullName>
        <label>Course Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMS_Course_Id__c</fullName>
        <label>LMS Course Id</label>
        <referenceTo>LMS_Course__c</referenceTo>
        <relationshipLabel>Certifications</relationshipLabel>
        <relationshipName>Certifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LMS_User_Name__c</fullName>
        <label>LMS User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Learner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LMS Certifications</relationshipLabel>
        <relationshipName>LMS_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Learner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Certifications</relationshipLabel>
        <relationshipName>Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Display_Name__c</fullName>
        <label>Status Display Name</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sync Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Email__c</fullName>
        <label>Student Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <label>Student Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URI__c</fullName>
        <label>URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validity_Date__c</fullName>
        <label>Validity Date</label>
        <type>Date</type>
    </fields>
    <label>LMS Course Certification</label>
    <nameField>
        <displayFormat>CRT-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>